examples/test/testpolicy18316.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy18316
  namespace: namespace230
spec:
  podSelector:
    matchLabels:
      key48: value14
      key46: value48
      key16: value33
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key15: value38
          key4: value11
      podSelector:
        matchLabels:
          key14: value41
          key19: value11
          key33: value30
